SecurityConfig, 로그인 관련 Cookie, Confing 변경